<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	
    <TableLayout
	  	android:id="@+id/title_layout"
	  	android:layout_width="match_parent"
	  	android:layout_height="wrap_content"
	 	android:stretchColumns="1">
	  	
	    <TableRow>
	        
		    <Button
		        android:id="@+id/get_back" 
		        android:text="@string/get_back" 
		        android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
		        android:background="@color/button_white" />
		    
			<TextView
				android:id="@+id/edit_budget"
				android:textSize="28.0sp"
				android:textColor="#000000"
				android:text="@string/edit_budget"
				android:ellipsize="marquee"
				android:gravity="center"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:singleLine="true" />

			<Button
			    android:id="@+id/commit"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/commit"
		        android:background="@color/button_white"  />
			
		</TableRow>
	</TableLayout>
	
    <TableLayout
	  	android:id="@+id/ExpenseOrIncome_layout"
	  	android:layout_width="match_parent"
	  	android:layout_height="wrap_content"
	  	android:layout_marginLeft="65dp"
        android:layout_marginRight="65dp"
        android:stretchColumns="1">
	  	
	  	<TableRow>
	              
		    <Button
		        android:id="@+id/expense" 
		        android:text="@string/expense" 
		        android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:background="@color/button_white" />

		    <TextView
				android:id="@+id/blank"
				android:text="    "
				android:ellipsize="marquee"
				android:gravity="center"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:singleLine="true" />
		    
		    <Button
		        android:id="@+id/income"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/income"
		        android:background="@color/button_white" />
			
		</TableRow>
	</TableLayout>

    <LinearLayout
 		android:id="@+id/money_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="65dp"
        android:background="@color/white" >

        <TextView
            android:id="@+id/rmb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rmb"
            android:textSize="30sp" 
            android:textColor="@color/red" />

        <EditText
            android:id="@+id/edit_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:hint="@string/hint_amount"
            android:inputType="numberDecimal"
            android:textColor="@color/red"
            android:textSize="30sp" />
        
	</LinearLayout>
	
    <LinearLayout
 		android:id="@+id/type_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="65dp"
        android:background="@color/white" >

        <Spinner
            android:id="@+id/type_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/type_expense"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="30sp" />
        
    </LinearLayout>
    
    <EditText
        android:id="@+id/edit_remark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="65dp"
        android:background="@color/white"
        android:hint="      填写备注"
        android:inputType="text"
        android:maxLines="3"
        android:minLines="2"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="28sp" />
    
</TableLayout>
