<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.formicary.mybill.MainActivity" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:stretchColumns="1" >

        <TableRow android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/property"
                android:layout_marginLeft="30dp"
                android:text="@string/property"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/propertyNumber"
                android:layout_marginRight="30dp"
                android:gravity="right"
                android:text="0.00"
                android:textSize="28sp" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:stretchColumns="1" >

        <TableRow android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/income_month"
                android:layout_marginLeft="30dp"
                android:text="@string/income_month"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/income_monthNumber"
                android:layout_marginRight="30dp"
                android:gravity="right"
                android:text="0.00"
                android:textSize="28sp" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:stretchColumns="1" >

        <TableRow android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/expense_month"
                android:layout_marginLeft="30dp"
                android:text="@string/expense_month"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/expense_monthNumber"
                android:layout_marginRight="30dp"
                android:gravity="right"
                android:text="0.00"
                android:textSize="28sp" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.50"
        android:stretchColumns="0,1" >

        <TableRow android:layout_marginTop="10dp" >

            <Button
                android:id="@+id/account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:background="@color/button_white"
                android:text="@string/account"
                android:textSize="28sp" />

            <Button
                android:id="@+id/keep_accounts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@color/button_white"
                android:text="@string/keep_accounts"
                android:textSize="28sp" />
        </TableRow>

        <TableRow>
			
            <TextView
                android:id="@+id/create_timeInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="创建时间"
                android:gravity="center" />
            
            <TextView
                android:id="@+id/create_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:gravity="center" />
            
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/update_timeInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="更新时间" 
                android:gravity="center" />
            
            <TextView
                android:id="@+id/update_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:gravity="center" />
            
        </TableRow>
    </TableLayout>

</TableLayout>